--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.0",
+    "@angular/cdk": "^12.2.5",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
     "@angular/core": "~11.0.0",
     "@angular/forms": "~11.0.0",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@auth0/auth0-angular": "^1.6.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngneat/transloco": "^2.23.0",
     "@popperjs/core": "^2.10.1",
