--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/material-design-icons/iconfont/material-icons.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.js"
@@ -96,8 +97,9 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
-              
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/material-design-icons/iconfont/material-icons.css"
+
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.js"
