--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ngcc"
-
   },
   "private": true,
   "dependencies": {
@@ -30,6 +29,7 @@
     "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
+    "material-design-icons": "^3.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
