refine role detail : add permission, user

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ngx-translate/core": "^11.0.1",
     "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
+    "ag-grid-angular": "^26.2.0",
+    "ag-grid-community": "^26.2.1",
     "angled-edges": "^2.0.0",
     "angular-feather": "^6.0.2",
     "aos": "^2.3.4",
@@ -51,6 +53,8 @@
     "ngx-swiper-wrapper": "^9.0.1",
     "ngx-typed-js": "^1.1.0",
     "noisejs": "^2.1.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.0.2",
     "prismjs": "^1.20.0",
     "rxjs": "^6.5.2",
     "simplebar": "^5.0.2",
