--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
               "node_modules/prismjs/themes/prism-okaidia.css",
               "node_modules/aos/dist/aos.css",
               "node_modules/material-design-icons/iconfont/material-icons.css",
-              "src/main.scss"
+              "src/main.scss",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/theme"]
